--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -1313,7 +1313,7 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Вклучено"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Вклучено - според лице"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Откривање лица"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Автоматски приспособувајте ја ориентацијата на екранот помеѓу портрет и пејзаж кога го движите телефонот"</string>
+    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Автоматски ја приспособува ориентацијата на екранот помеѓу портрет и пејзаж кога го движите телефонот"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Дознајте повеќе за „Автоматско ротирање“"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Менувајте помеѓу портрет и пејзаж кога го движите телефонот"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Резолуција на екран"</string>
@@ -3423,7 +3423,7 @@
     <string name="apps_with_restrictions_settings_button" msgid="2648355133416902221">"Прошири поставки за апликација"</string>
     <string name="user_choose_copy_apps_to_another_user" msgid="5914037067347012870">"Изберете апликации што ќе се инсталираат"</string>
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"Инсталирајте достапни апликации"</string>
-    <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Плаќања без контакт"</string>
+    <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Бесконтактно плаќање"</string>
     <string name="nfc_default_payment_settings_title" msgid="2150504446774382261">"Стандардна апликација за плаќање"</string>
     <string name="nfc_default_payment_footer" msgid="978535088340021360">"За да платите со апликација за плаќање, држете ја задната страна на уредот на платежен терминал"</string>
     <string name="nfc_more_details" msgid="1700713533074275233">"Дознајте повеќе"</string>
@@ -4977,7 +4977,7 @@
     <string name="ambient_display_tap_screen_title" product="tablet" msgid="6461531447715370632">"Допрете за да го проверите таблетот"</string>
     <string name="ambient_display_tap_screen_title" product="device" msgid="4423803387551153840">"Допрете за да го проверите уредот"</string>
     <string name="ambient_display_tap_screen_summary" msgid="4480489179996521405">"За да ги проверите времето, известувањата и другите информации, допрете го екранот."</string>
-    <string name="emergency_gesture_screen_title" msgid="3280543310204360902">"Итна помош"</string>
+    <string name="emergency_gesture_screen_title" msgid="3280543310204360902">"SOS за итни случаи"</string>
     <string name="emergency_gesture_switchbar_title" msgid="7421353963329899514">"Користи „Итна помош“"</string>
     <string name="emergency_gesture_entrypoint_summary" msgid="4730874229911208834">"Управувано од <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="emergency_gesture_screen_summary" msgid="6640521030845132507">"Брзо притиснете го копчето за вклучување 5 или повеќе пати за да започнат дејствата наведени подолу"</string>
